Deployments/Istio/Examples/Networking/apiproxy-gateway-sslpassthru.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apiproxy-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
      # credentialName: aks-workshop-tls-secret
    hosts:
#Ingress Gateway DNS host of Primary Cluster
    - "apiproxywks.internal.wkshpdev.com"    

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apiproxy-virtual-service
spec:
  hosts:
#Ingress Gateway DNS host of Primary Cluster
  - "apiproxywks.internal.wkshpdev.com"  
  gateways:
  - apiproxy-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - "apiproxywks.internal.wkshpdev.com"
    route:
    - destination:
        host: apiproxy-service
        port:
          number: 443
