Deployments/Istio/Examples/Networking/kiali-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway  
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  # - port:
  #     number: 80
  #     name: http
  #     protocol: HTTP
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: aks-workshop-tls-secret
    hosts:
#Ingress Gateway DNS host of Primary Cluster
    - "kiali.internal.wkshpdev.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtual-service
spec:
  hosts:
#Ingress Gateway DNS host of Primary Cluster
  - "kiali.internal.wkshpdev.com"  
  gateways:
  - kiali-gateway
  http:                  
  - match:
    - uri:
        regex: /?(.*)
    route:
    - destination:
        host: kiali
        port:
          number: 20001
