Deployments/Istio/Examples/Networking/ratingsweb-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ratingsweb-gateway  
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  # - port:
  #     number: 80
  #     name: http
  #     protocol: HTTP
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: aks-workshop-tls-secret    
    hosts:
    - "dev.internal.wkshpdev.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratingsweb-virtual-service  
spec:
  hosts:
  - "dev.internal.wkshpdev.com"
  gateways:
  - ratingsweb-gateway
  http:
  - match:
    - uri:
        regex: /?(.*)  
    route:
    - destination:
        host: ratingsweb-service
        port:
          number: 80
